Fix activation of the node on opening .kra document

Since KisDummiesFacadeBase::setImage() is now executed asyncronously
the node activation that used to happen in KisView::slotLoadingFinished()
now doesn't work anymore. Hence we should just instruct
KisDummiesFacadeBase::setImage() itself, which node it should activate
at the end of image loading into dummies graph.

BUG:480718


(cherry picked from commit 1079c7f1f7e32aace1fcf7a5155d2841ca25ab7e)