libs/ui/KisDocument.h
@@ -607,7 +607,7 @@ public:
     /**
      * Set the current image to the specified image and turn undo on.
      */
-    void setCurrentImage(KisImageSP image, bool forceInitialUpdate = true);
+    void setCurrentImage(KisImageSP image, bool forceInitialUpdate = true, KisNodeSP preActivatedNode = nullptr);
 
     /**
      * Set the image of the document preliminary, before the document
