libs/ui/flake/kis_shape_controller.h
@@ -50,7 +50,8 @@ public:
     KoShapeLayer* shapeForNode(KisNodeSP layer) const;
     void setInitialShapeForCanvas(KisCanvas2 *canvas);
 
-    void setImage(KisImageWSP image) override;
+    using KisDummiesFacadeBase::setImage;
+    void setImage(KisImageWSP image, KisNodeSP activeNode) override;
 
 
 private:
