libs/ui/tests/kis_dummies_facade_base_test.h
@@ -31,6 +31,7 @@ private Q_SLOTS:
     void init();
     void cleanup();
 
+    void testSetImage_data();
     void testSetImage();
     void testAddNode();
     void testRemoveNode();
